--- a/pixel-grid.css
+++ b/pixel-grid.css
@@ -37,6 +37,6 @@
 .row:before, .row:after { content: ""; display: table; }
 .row:after { clear: both; }
 
-img, object, embed { max-width: 100%; height: auto; }
+img, object, embed, video { max-width: 100%; height: auto; }
 
 img { -ms-interpolation-mode: bicubic; }
